static/renderer/styles/styles.css
/* ------ General ------ */
* {
  margin: 0;
  padding: 0;
}
html, body {
  height: 100%;
}
*:focus {
  outline: none;
}

:root {
  /* Root font size (Scales most stuff) */
  font-size: 1em;
  /* Variables */
  --theme__font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  --theme__text-color: #f1f1f1;
  --theme__background-color: #1b1b1c;
  --theme__search-bar__background-color: #1b1b1d;
  --theme__search-bar__outline-color: #47474d;
  --theme__title-bar__background-color: #141417;
  /* Pimp */
  color: var(--theme__text-color);
}

body {
  overflow: hidden;
  /* Pimp */
  background-color: var(--theme__background-color);
  font-family: var(--theme__font-family);
}

/* Measure elements by the outline of their border instaed of by their content */
:root {
  box-sizing: border-box;
}
*, ::before, ::after {
  box-sizing: inherit;
}


/* ------ Main Layout ------ */
.root {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  /* Pimp */
  background-color: var(--theme__title-bar__background-color);
}
.main {
  flex: 1;
  overflow: hidden;
  /* Pimp */
  background-color: var(--theme__background-color);
}


/* ------ TitleBar ------ */
.title-bar {
  display: flex;
  width: 100%;
  height: 18px;
  margin-top: 4px;
  -webkit-app-region: drag; /* Dragging this moves the window */
  -webkit-user-select: none; /* Disable text selection */
  /* Pimp */
  background-color: var(--theme__title-bar__background-color);
}
/* Title */
.title-bar__title {
  display: inline;
  flex: 1;
  padding-left: 2px;
  font-size: 16px;
  position: relative;
  top: -2px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
/* Button Bar */
.title-bar__button-bar {
  height: 22px;
  flex: 0 1 auto;
  display: block;
  float: right;
  position: relative;
  top: -4px;
}
/* Button Bar Buttons */
.title-bar__button-bar__min,
.title-bar__button-bar__max,
.title-bar__button-bar__cross {
  height: 100%;
  width: 28px;
  float: left;
  -webkit-app-region: no-drag;
  /* Pimp */
  cursor: pointer;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 0.3;
}
.title-bar__button-bar__min:hover,
.title-bar__button-bar__max:hover,
.title-bar__button-bar__cross:hover {
  opacity: 1;
}
/* Minimize Button */
.title-bar__button-bar__min {
  background-image: url('../images/min.png');
}
.title-bar__button-bar__min:hover {
  background-color: #242428;
}
/* Maximize Button */
.title-bar__button-bar__max {
  background-image: url('../images/max.png');
}
.title-bar__button-bar__max:hover {
  background-color: #242428;
}
/* Cross Button */
.title-bar__button-bar__cross {
  background-image: url('../images/cross.png');
}
.title-bar__button-bar__cross:hover {
  background-color: #eb4b4b;
}


/* ------ Header ------ */
.header {
  font-size: 0.75em;
  padding: 0.3em;
  padding-bottom: 0.4em;
  /* Pimp */
  background-color: #2d2d30;
}
.header__menu {
  display: inline-block;
  padding: 0.3em 0;
  margin-right: 1em;
  margin-bottom: 0.5em;
  /* Pimp */
  user-select: none;
}
.header__menu__item {
  display: inline-block;
  padding: 0.3em 0.7em;
  border: 1px solid rgba(0,0,0,0);
}
.header__menu__item:hover {
  /* Pimp */
  background-color: #3c2d4b;
  border-color: #d33682;
}
.header__menu__item__link {
  /* Pimp */
  cursor: pointer;
  text-decoration: none;
  color: var(--theme__text-color);
}
/* Header Search */
.header__search {
  width: 12em;
  padding: 0.25em;
  margin-right: 0.5em;
  /* Pimp */
  border: 1px solid var(--theme__search-bar__outline-color);
  background-color: var(--theme__background-color);
}
.header__search__input, .header__search__input:active {
  font-size: 1em;
  /* Pimp */
  color: var(--theme__text-color);
  background: none;
  border: none;
  outline: none;
}
.header__search__tag {
  /* Pimp */
  border: 1px solid #888;
  background-color: #aaa;
}
.header__search__tag__text,
.header__search__tag__text:active {
  /* Pimp */
}
.header__search__tag__remove {
  /* Pimp */
  /*
  border: 0.1em solid #800;
  border-radius: 999em;
  background-color: #a00;
  font-size: 0.75rem;
  */
}
.header__search__tag__remove:hover {
  /* Pimp */
  cursor: pointer;
}
.header__search__tag__remove__inner {
  /* Pimp */
  color: #c00;
  font-family: monospace, monospace;
}
/* Header Order By / Reverse */
.header__order-by,
.header__order-reverse {
  font-size: 1em;
  margin-right: 0.5em;
  border: 1px solid var(--theme__search-bar__outline-color);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  /* Pimp */
  font-family: var(--theme__font-family);
  background-color: var(--theme__background-color);
  color: var(--theme__text-color);
}
.header__order-by {
}
.header__order-reverse {
}


/* ------ Footer ------ */
.footer {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  /* Pimp */
  user-select: none;
  background-color: #2a2a2b;
}
/* Game Count */
.footer__game-count {
  display: inline-block;
  margin-left: 0.3em;
}
/* Scale Slider */
.footer__scale-slider {
  display: block;
  float: right;
  height: 1em;
  margin: 0 0.3em;
  width: 12em;
  max-width: calc(100% - 0.3em * 2); /* 100% - Horizontal margin */
}
.footer__scale-slider input[type=range] {
  width: 100%;
  height: 100%;
  -webkit-appearance: none;
}
.footer__scale-slider input[type=range]::-webkit-slider-runnable-track {
  height: 100%;
  cursor: pointer;
  background: #484d4d;
}
.footer__scale-slider input[type=range]::-webkit-slider-thumb {
  height: 100%;
  width: 1.1rem;
  margin-top: -0.7px;
  -webkit-appearance: none;
  cursor: pointer;
  background: #7578ad;
}
.footer__scale-slider input[type=range]:focus::-webkit-slider-runnable-track {
  background: #545a5a;
}

/* ------ Home ------ */
.home {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.home__title {
  font-size: 2.5em;
}
.home__subtitle {
  font-size: 1.1em;
  padding-bottom: 1em;
}
.home__tutorial {
  line-height: 1.35;
}


/* ------ Page-Not-Found (404) ------ */
.page-not-found {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.page-not-found__error-number {
  font-size: 8em;
}
.page-not-found__title {
  font-size: 2em;
  padding-bottom: 0.5em;
}


/* ------ About ------ */
.about {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.about__title {
  font-size: 2.5em;
  padding-bottom: 0.5em;
}


/* ------ Browse ------ */
.game-browser {
  width: 100%;
  height: 100%;
  display: flex;
}
.game-browser__left {
  flex: 1 0 auto;
}
.game-browser__right {
  width: 20em;
}
.game-browser__right p {
  display: inline;
}
.game-browser__right--none { /* No Game Selected */
  padding: 1em 0;
  text-align: center;
}
.game-browser__right--none p {
  font-size: 1.5em;
  font-weight: bold;
}

/* BrowserSidebar */
.browse-sidebar {
  width: 100%;
  height: 100%;
  padding: 0.5em 0.8em;
}
/* BrowserSidebar Section */
.browse-sidebar__section {
  margin-bottom: 1.2rem;
}
.browse-sidebar__section:last-child {
  margin-bottom: 0;
}
/* BrowserSidebar Row */
.browse-sidebar__row {
  margin-bottom: 0.2rem;
}
.browse-sidebar__row p {
  user-select: none;
  cursor: default;
}
.browse-sidebar__row--title {
  font-size: 1.2em;
  font-weight: bold;
  margin-bottom: 0;
}

/* GameList */
.game-list {
  background-color: var(--theme__background-color);
  /* --height | Height of list items (in pixels) */
}
/* GameList Item */
.game-list__item {
  display: flex;
  /* Pimp */
  list-style: none;
  background-color: var(--theme__background-color);
  color: #aaa;
}
.game-list__item--even {
  /* Pimp */
  background-color: #1e1e1f
}
.game-list__item:hover {
  /* Pimp */
  background-color: #3c3c41;
  color: #e6e6e6;
  cursor: pointer;
}
.game-list__item--selected {
  /* Pimp */
  background-color: #791c76;
  color: #cecece;
}
.game-list__item--selected:hover {
  /* Pimp */
  background-color: #a72aa2;
  color: #e6e6e6;
}
/* GameList Item Thumb */
.game-list__item__thumb {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
/* GameList Item Title */
.game-list__item__right {
  flex: 1;
  overflow: hidden;
  padding: calc(0.1px * var(--height));
}
.game-list__item__right__title {
  font-size: calc(0.384px * var(--height));
  white-space: nowrap;
  /* Pimp */
  text-overflow: ellipsis;
  overflow: hidden;
}
.game-list__item__right__genre {
  font-size: calc(0.256px * var(--height));
}
/* GameList NoGames */
.game-list__no-games {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.game-list__no-games__title {
  font-size: 2em;
}

/** ------ Config ------ */
.config-page {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.config-page__title {
  font-size: 2.5em;
}
/* ... */
.config-page p {
  display: inline-block;
}
.config-page input[type="checkbox"] {
  vertical-align: middle;
  transform: scale(1.25);
}
/* Setting */
.setting {
  margin: 0 auto;
  margin-top: 1.75em;
  max-width: 40em;
  /* Pimp */
  border-radius: 0.2em;
  background-color: #242428;
  border: 1px solid #141417;
  box-shadow: 0px 2px 4px 0px #09090a;
}
.setting > :first-child {
  border-top: 0;
}
.setting__title {
  margin: 0.2em 0;
  font-size: 1.2em;
  font-weight: bold;
}
/* Setting Row */
.setting__row {
  display: flex;
  padding: 0.75em;
  /* Pimp */
  border-top: 1px solid #141417;
}
.setting__row__title {
  flex: 0 1 auto;
  font-size: 1.15em;
  font-weight: bold;
}
.setting__row__content {
  flex: 1 1 auto;
}
/* Setting Row Content - FlashPoint Path */
.setting__row__content--flashpoint-path {
  display: flex;
  max-width: 24em;
  margin-left: auto;
}
.setting__row__content--flashpoint-path .flashpoint-path__input {
  flex: 1;
  border: 1px solid var(--theme__search-bar__outline-color);
}
.setting__row__content--flashpoint-path .flashpoint-path__input--valid {
  background-color: #009600;
}
.setting__row__content--flashpoint-path .flashpoint-path__input--invalid {
  background-color: #840000;
}
.setting__row__content--flashpoint-path .flashpoint-path__input input[type="text"] {
  width: 100%;
  font-size: 1em;
  background: none;
  border: none;
  outline: none;
  color: var(--theme__text-color);
}
/* Setting Row Content - Toggle */
.setting__row__content--toggle > div {
  float: right;
}
/* SaveAndRestart */
.config-page input[type="button"].save-and-restart {
  font-size: 1.075em;
  margin: 0 auto;
}

/* ------ Generic & Re-usable ------ */
/* Simple Button */
.simple-button {
  padding: 0 0.2em;
  background-color: #2d2d30;
  border: 1px solid var(--theme__search-bar__outline-color);
  color: var(--theme__text-color);
}
.simple-button:hover {
  background-color: #434346;
  border-color: #6f6f75;
}


/* ------ Search & SearchTag Components ------ */
.search {
  display: inline-flex;
  white-space: nowrap;
  overflow: hidden;
  padding: 0.25em;
}
.search__input, .search__input:active {
  width: 0;
  flex: 1;
}
.search__tag {
  display: inline-block;
  white-space: nowrap;
  text-align: center;
  flex: 0 1 auto;
  margin-right: 0.5em;
  padding: 0.15em 0.25em;
}
.search__tag__text,
.search__tag__text:active {
  display: inline-block;
  white-space: nowrap;
}
.search__tag__remove {
  display: inline-block;
  text-align: center;
  width: 0.5em;
  height: 0.5em;
  margin-left: 0.25em;
}
.search__tag__remove__inner {
  /* Pimp */
  user-select: none;
}

/* ------ Logs ------ */
.logs__log-data {
  height: 100%;
  overflow: scroll;
}

